gccida/c3/delete_output_reload
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8041:4: error: expected ';' after expression
rtx in; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8041:5: error: use of undeclared identifier 'in'
rtx in; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8044:4: error: expected ';' after expression
rtx out_reg; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8044:5: error: use of undeclared identifier 'out_reg'
rtx out_reg; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8049:4: error: expected ';' after expression
rtx v15; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8049:5: error: use of undeclared identifier 'v15'
rtx v15; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8054:4: error: expected ';' after expression
rtx v20; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8054:5: error: use of undeclared identifier 'v20'
rtx v20; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8062:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8062:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8064:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8064:5: error: use of undeclared identifier 'v30'
rtx v30; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8065:4: error: expected ';' after expression
rtx dead_insn; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8065:5: error: use of undeclared identifier 'dead_insn'
rtx dead_insn; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8069:1: error: use of undeclared identifier 'dead_insn'
dead_insn = spill_reg_store[last_reload_reg]; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8081:1: error: use of undeclared identifier 'in'
in = rld[v4].in; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8082:6: error: use of undeclared identifier 'in'
if ( in ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8084:17: error: use of undeclared identifier 'in'
v8 = *( _WORD *)in; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/reload1.c:8087:1: error: use of undeclared identifier 'in'
in = rld[v4].in_reg; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/delete_output_reload/src/obj/reload1.o] Error 1
